# webddlog_study

./: Cargo.toml  LICENSE  README.md  first_ui_sketch.drawio
docs/: additionals.tex  annotation.tex  bibliography.bib  bibliography.tex  chapter1.tex  chapter2.tex  chapter3.tex  conclusions.tex  db.sqlite  introduction.tex  khsu.cls  main.tex  title.tex
program/: README.md
program/shared/src/: parser_types.rs
program/shared/src/lang/: lexer.rs  parser.rs
program/web-ddlog/: Cargo.toml  index.html
program/web-ddlog/src/: app.rs  main.rs  store.rs
program/web-ddlog/src/components/: data_tab.rs  editor.rs  example.rs  footer.rs  header.rs  home.rs  interaction.rs  menu.rs  mod.rs  project_area.rs
program/web-ddlog/src/lang/: lexer.rs  parser.rs
program/web-ddlog/src/types/: data.rs
program/web-ddlog/src/validation/: project_area.rs
shared/: Cargo.toml
shared/src/: lexer_types.rs  lib.rs
web-ddlog/: index.html
web-ddlog/src/: app.rs  main.rs  store.rs
web-ddlog/src/components/: editor.rs  footer.rs  header.rs  interaction.rs  menu.rs  mod.rs
web-ddlog/src/lang/: lexer.rs  parser.rs
web-ddlog/src/types/: mod.rs  relation.rs
web-ddlog/src/validation/: mod.rs
