[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
server = ["serde"]
lang = ["log"]

[dependencies]
log = {version = "0.4.6", optional = true}
arcstr = "1.1.5"
serde = {version = "1.0", features=["derive"], optional = true}
