[package]
name = "web-ddlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.85"
web-sys = {version = "0.3", features=["MouseEvent"]}
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.9.2"
stylist = {version = "0.13", features=["yew"]}
genawaiter="0.99.1"
arcstr = "1.1.5"
shared = {path = "../shared"}  